@@ -47,14 +47,14 @@ import static java.lang.foreign.ValueLayout.JAVA_INT;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3, jvmArgsAppend = "--enable-preview")
+@Fork(3)
 public class VarHandleExact {
 
     static final VarHandle exact;
     static final VarHandle generic;
 
     static {
-        generic = MethodHandles.memorySegmentViewVarHandle(JAVA_INT);
+        generic = JAVA_INT.varHandle();
         exact = generic.withInvokeExactBehavior();
     }
 
